--- a/latest-versions/index.mdx
+++ b/latest-versions/index.mdx
@@ -4,6 +4,8 @@ date: "2022-05-23"
 title: "Latest-Versions Project"
 ---
 
+import Card from '../../components/card'
+
 # The lead...
 
 So, my first little project is going to scrape a bunch of repos / websites for the latest version
@@ -18,3 +20,7 @@ The initial plan is to get the latest versions of these categories:
 - IDEs
 
 Then we'll build from there.
+
+# JSX
+
+<Card />
