--- a/latest-versions/index.mdx
+++ b/latest-versions/index.mdx
@@ -4,7 +4,7 @@ date: "2022-05-23"
 title: "Latest-Versions Project"
 ---
 
-import Card from '../../components/card'
+import Card from '../components/card'
 
 # The lead...
 
