--- a/latest-versions/index.mdx
+++ b/latest-versions/index.mdx
@@ -4,6 +4,7 @@ date: "2022-05-23"
 title: "Latest-Versions Project"
 ---
 
+import Card from '../../components/card'
 
 # The lead...
 
@@ -21,3 +22,5 @@ The initial plan is to get the latest versions of these categories:
 Then we'll build from there.
 
 # JSX
+
+<Card />
