--- a/latest-versions/index.mdx
+++ b/latest-versions/index.mdx
@@ -4,8 +4,6 @@ date: "2022-05-23"
 title: "Latest-Versions Project"
 ---
 
-import Card from '../../components/card'
-
 # The lead...
 
 So, my first little project is going to scrape a bunch of repos / websites for the latest version
@@ -21,6 +19,6 @@ The initial plan is to get the latest versions of these categories:
 
 Then we'll build from there.
 
-# JSX
+# Where?
 
-<Card />
+See the front page of this site.
