--- a/005_svg_effects/index.mdx
+++ b/005_svg_effects/index.mdx
@@ -1,5 +1,5 @@
 ---
-slug: "/posts/svg_effects"
+slug: "/posts/svg-effects"
 date: "2022-06-21"
 title: "👨🏻‍🎨 SVG effects for Instagram-like photo editing adjustments"
 hero_image: "bigben.jpg"
