--- a/005_svg_effects/index.mdx
+++ b/005_svg_effects/index.mdx
@@ -4,6 +4,7 @@ date: "2022-06-21"
 title: "👨🏻‍🎨 SVG effects for Instagram-like photo editing adjustments"
 ---
 
+import bigben from "./bigben.jpg"
 
 Note, this article is going to try to be as simple as possible. I'm not going into the depths of SVG functions and elements... more just a reference on how to do specific things. It's a cobbled collection of information I've found from other people rather than any critical-thinking on my part. Check out the links for more in-depth info on each topic.
 
@@ -120,7 +121,7 @@ So the code becomes:
         </filter>
     </defs>
     
-  <image xlink:href="bigben.jpg" width="1500" height="1000" filter="url(#overSaturateThis)"></image>
+  <image xlinkHref={bigben} width="1500" height="1000" filter="url(#overSaturateThis)"></image>
 </svg>
 
 ---
@@ -158,6 +159,19 @@ Let's bring the brightness down by half (0.5) in this example.
   <image xlink:href="bigben.jpg" width="1500" height="1000" filter="url(#lowerTheBrightness)"></image>
 </svg>
 ```
+<svg viewBox="0 0 1500 1000">
+    <defs>
+        <filter id="lowerTheBrightness">
+            <feComponentTransfer in="sourceGraphic">
+                <feFuncR type="linear" slope="0.5"/>
+                <feFuncG type="linear" slope="0.5"/>
+                <feFuncB type="linear" slope="0.5"/>
+            </feComponentTransfer>
+        </filter>
+    </defs>
+    
+  <image xlinkHref={bigben} width="1500" height="1000" filter="url(#lowerTheBrightness)"></image>
+</svg>
 
 ---
 
@@ -203,6 +217,20 @@ Plug it into the full code to effect the image and you've got this.
 </svg>
 ```
 
+<svg viewBox="0 0 1500 1000">
+    <defs>
+    	<filter id="enhanceTheContrast">
+     		<feComponentTransfer in="sourceImage">
+                <feFuncR type="linear" slope="1.2" intercept="-0.1"/>
+                <feFuncG type="linear" slope="1.2" intercept="-0.1"/>
+                <feFuncB type="linear" slope="1.2" intercept="-0.1"/>
+           </feComponentTransfer>
+   		</filter>
+    </defs>
+    
+  <image xlinkHref={bigben} width="1500" height="1000" filter="url(#enhanceTheContrast)"></image>
+</svg>
+
 ---
 
 ## 🔪 Sharpening
@@ -235,6 +263,20 @@ Playing with the `-1` up and down can increase or decrease the sharpness. Play
   <image xlink:href="bigben.jpg" width="1500" height="1000" filter="url(#sharpenTheImage)"></image>
 </svg>
 ```
+<svg viewBox="0 0 1500 1000">
+    <defs>
+        <filter id="sharpenTheImage">
+            <feConvolveMatrix 
+            	in="SourceGraphic" 
+                order="3" 
+                preserveAlpha="true" 
+                kernelMatrix="-1 0 0 0 4 0 0 0 -1"
+            />
+        </filter>
+    </defs>
+    
+  <image xlinkHref={bigben} width="1500" height="1000" filter="url(#sharpenTheImage)"></image>
+</svg>
 
 ---
 
@@ -314,6 +356,20 @@ So the full code would be:
   <image xlink:href="bigben.jpg" width="1500" height="1000" filter="url(#blendingTest)"></image>
 </svg>
 ```
+<svg viewBox="0 0 1500 1000">
+    <defs>
+    	  <filter id="blendingTest">
+            	<feFlood 
+                	flood-color="#FF0000"
+                	flood-opacity="0.95"
+                	result="floodOut"
+            	></feFlood>
+            <feBlend mode="multiply" in="SourceGraphic" in2="floodOut"/>
+          </filter>
+    </defs>
+    
+  <image xlinkHref={bigben} width="1500" height="1000" filter="url(#blendingTest)"></image>
+</svg>
 
 ---
 
@@ -393,6 +449,37 @@ This gives us the code:
   <image xlink:href="bigben.jpg" width="1500" height="1000" filter="url(#epicTriple)"></image>
 </svg>
 ```
+<svg viewBox="0 0 1500 1000">
+    <defs>
+    	  
+        <filter id="epicTriple">
+            <feColorMatrix 
+                in="SourceGraphic"
+                type="saturate" 
+                values="3"
+                result="saturateOUT"
+            />
+
+            <feColorMatrix 
+                in="saturateOUT"
+                type="hueRotate" 
+                values="45"
+                result="hueOUT"
+            />
+
+            <feConvolveMatrix 
+                in="hueOUT" 
+                order="3" 
+                preserveAlpha="true" 
+                kernelMatrix="-1 0 0 0 4 0 0 0 -1"
+                result="sharpenOUT"
+            />
+
+        </filter>
+    </defs>
+    
+  <image xlinkHref={bigben} width="1500" height="1000" filter="url(#epicTriple)"></image>
+</svg>
 
 ---
 
@@ -417,6 +504,19 @@ First, just desaturate the image completely to `0`. Easy-as. We've done this ab
   <image xlink:href="bigben.jpg" width="1500" height="1000" filter="url(#blackAndWhite)"></image>
 </svg>
 ```
+<svg viewBox="0 0 1500 1000">
+    <defs>
+        <filter id="blackAndWhite">
+            <feColorMatrix 
+            	type="saturate" 
+                in="SourceGraphic" 
+                values="0"
+            ></feColorMatrix>
+        </filter>
+    </defs>
+    
+  <image xlinkHref={bigben} width="1500" height="1000" filter="url(#blackAndWhite)"></image>
+</svg>
 
 Simple Black & White Filter
 
@@ -438,6 +538,20 @@ Secondly, we can use the more complex colourMatrix to control the RGB values tha
   <image xlink:href="bigben.jpg" width="1500" height="1000" filter="url(#blackAndWhiteRed)"></image>
 </svg>
 ```
+<svg viewBox="0 0 1500 1000">
+    <defs>
+        <filter id="blackAndWhiteRed">
+        	<feColorMatrix type="matrix" values="
+                .33 0 0 0 0
+                .33 0 0 0 0
+                .33 0 0 0 0
+                 0  0 0 1 0">
+        	</feColorMatrix>
+        </filter>
+    </defs>
+    
+  <image xlinkHref={bigben} width="1500" height="1000" filter="url(#blackAndWhiteRed)"></image>
+</svg>
 
 Red-Channel B&W
 
@@ -459,6 +573,20 @@ We have the green channel:
   <image xlink:href="bigben.jpg" width="1500" height="1000" filter="url(#blackAndWhiteGreen)"></image>
 </svg>
 ```
+<svg viewBox="0 0 1500 1000">
+    <defs>
+        <filter id="blackAndWhiteGreen">
+        	<feColorMatrix type="matrix" values="
+                0 .33 0 0 0
+                0 .33 0 0 0
+                0 .33 0 0 0
+                0   0 0 1 0">
+        	</feColorMatrix>
+        </filter>
+    </defs>
+    
+  <image xlinkHref={bigben} width="1500" height="1000" filter="url(#blackAndWhiteGreen)"></image>
+</svg>
 
 Green Channel B&W
 
@@ -480,6 +608,20 @@ And the Blue Channel:
   <image xlink:href="bigben.jpg" width="1500" height="1000" filter="url(#blackAndWhiteBlue)"></image>
 </svg>
 ```
+<svg viewBox="0 0 1500 1000">
+    <defs>
+        <filter id="blackAndWhiteBlue">
+        	<feColorMatrix type="matrix" values="
+                0 0 .33 0 0
+                0 0 .33 0 0
+                0 0 .33 0 0
+                0 0   0 1 0">
+        	</feColorMatrix>
+        </filter>
+    </defs>
+    
+  <image xlinkHref={bigben} width="1500" height="1000" filter="url(#blackAndWhiteBlue)"></image>
+</svg>
 
 Blue Channel B&W
 
@@ -603,7 +745,70 @@ Chaining the filters together is now as easy as pie:
 
 Which gives us this wonderful result:
 
-Original:
+<svg viewBox="0 0 1500 1000">
+    <defs>
+    <filter id="aden" filterUnits="objectBoundingBox">
+    
+    <!-- HUE ROTATE -20deg -->
+    <feColorMatrix 
+    	type="hueRotate" 
+        in="SourceGraphic" 
+        values="-20"
+        result="hueRotateOut" 
+    />
+     
+    <!-- DESATURATE 0.85 -->
+    <feColorMatrix 
+    	type="saturate" 
+        in="hueRotateOut"  
+        values="0.85"
+        result="saturateOut"
+    />
+     
+    <!-- BRIGHTNESS 0.9 -->
+    <feComponentTransfer in="saturateOut" result="brightnessOut">
+        <feFuncR type="linear" slope="0.9"/>
+        <feFuncG type="linear" slope="0.9"/>
+        <feFuncB type="linear" slope="0.9"/>
+    </feComponentTransfer>
+
+    <!-- CONTRAST 1.2 -->
+    <feComponentTransfer in="brightnessOut" result="contrastOut">
+        <feFuncR type="linear" slope="1.2" intercept="0.05"/>
+        <feFuncG type="linear" slope="1.2" intercept="0.05"/>
+        <feFuncB type="linear" slope="1.2" intercept="0.05"/>
+    </feComponentTransfer>
+
+    <!-- FLOOD OVERLAY rgba(66, 10, 14, .2) -->
+    <feFlood 
+    	flood-color="#420A0E" 
+        flood-opacity="0.2" 
+        out="floodOut" 
+    />
+
+    <!-- BLEND FLOOD & CONTRASTOUT -->
+    <feBlend 
+    	mode="darken" 
+        in="contrastOut" 
+        in2="floodOut" 
+        result="blendOut"
+    />
+
+    <!-- SHARPEN -->
+    <feConvolveMatrix 
+    	in="blendOut"
+        order="3" 
+        preserveAlpha="true" 
+        kernelMatrix="-1 0 0 0 4 0 0 0 -1"
+        result="sharpenOut" 
+    />
+
+  </filter>
+  </defs>
+    
+  <image xlinkHref={bigben} width="1500" height="1000" filter="url(#aden)"></image>
+</svg>
+
 
 Just for reference, all of her effects are here: [https://github.com/una/CSSgram/tree/master/source/scss](https://github.com/una/CSSgram/tree/master/source/scss)
 
