--- a/005_svg_effects/index.mdx
+++ b/005_svg_effects/index.mdx
@@ -6,9 +6,11 @@ title: "👨🏻‍🎨 SVG effects for Instagram-like photo editing adjustments
 
 import bigben from "./bigben.jpg"
 
+# 👨🏻‍🎨 SVG effects for Instagram-like photo editing adjustments
+
 Note, this article is going to try to be as simple as possible. I'm not going into the depths of SVG functions and elements... more just a reference on how to do specific things. It's a cobbled collection of information I've found from other people rather than any critical-thinking on my part. Check out the links for more in-depth info on each topic.
 
-TL;DR [Quick Reference is at the bottom of the page.](#-quick-reference)
+[toc]
 
 ![](bigben.jpg)
 
