--- a/004_got_game/index.mdx
+++ b/004_got_game/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: "/posts/got-game"
 date: "2022-06-21"
-title: "Gatsby Blog"
+title: "🔥 Got Game? Secrets of Great Incident Management"
 ---
 
 Little shoutout to my friend and colleague [John Arundel](https://bitfieldconsulting.com/) who wrote a fantastic article for [uptime.com](https://uptime.com/) and their blog about some of the work my colleagues and I do at [ThirtyThree](https://www.thirtythree.co.uk/uk).
