--- a/003_ffmpeg/index.mdx
+++ b/003_ffmpeg/index.mdx
@@ -1,10 +1,10 @@
 ---
 slug: "/posts/ffmpeg"
 date: "2022-06-21"
-title: "Automating Videos with FFMpeg"
+title: "🎥 Automating Videos with FFMpeg"
 ---
 
-# Auto-Editing, Converting, Colour Correcting and Grading Videos with FFMpeg
+# 🎥 Auto-Editing, Converting, Colour Correcting and Grading Videos with FFMpeg
 
 ## Video.m4v + BASH + FFMpeg
 
