--- a/001_latest-versions/index.mdx
+++ b/001_latest-versions/index.mdx
@@ -1,10 +1,10 @@
 ---
 slug: "/posts/latest-versions"
 date: "2022-05-23"
-title: "Latest-Versions Project"
+title: "🎉 Latest-Versions Project"
 ---
 
-# The lead...
+# 🎉 Latest Versions
 
 So, my first little project is going to scrape a bunch of repos / websites for the latest version
 of their product. 
