--- a/002_gatsby-blog/index.mdx
+++ b/002_gatsby-blog/index.mdx
@@ -1,9 +1,9 @@
 ---
 slug: "/posts/gatsby-blog"
 date: "2022-06-21"
-title: "Gatsby Blog"
+title: "✍️ Gatsby Blog"
 ---
 
-# New Blog
+# ✍️ New Blog
 
 I'm trying Gatsby. It's linking to a separate git repo with all of my posts which is neat.
