--- a/003_ffmpeg/index.mdx
+++ b/003_ffmpeg/index.mdx
@@ -1,7 +1,8 @@
 ---
-slug: "/posts/ffmpeg"
-date: "2022-06-21"
+slug:  "/posts/ffmpeg"
+date:  "2022-06-21"
 title: "🎥 Automating Videos with FFMpeg"
+icon:  "ffmpeg"
 ---
 
 # 🎥 Auto-Editing, Converting, Colour Correcting and Grading Videos with FFMpeg
