--- a/002_gatsby-blog/index.mdx
+++ b/002_gatsby-blog/index.mdx
@@ -1,7 +1,8 @@
 ---
 slug: "/posts/gatsby-blog"
 date: "2018-06-01"
-title: "✍️ Gatsby Blog"
+title: "Gatsby Blog"
+icon:  "gatsby"
 ---
 
 # ✍️ New Blog
