--- a/005_svg_effects/index.mdx
+++ b/005_svg_effects/index.mdx
@@ -1,7 +1,8 @@
 ---
 slug: "/posts/svg-effects-for-instagram-like-filters"
 date: "2022-06-21"
-title: "👨🏻‍🎨 SVG effects for Instagram-like photo editing adjustments"
+title: "SVG effects for Instagram-like photo editing adjustments"
+icon:  "svg"
 ---
 
 import bigben from "./bigben.jpg"
