--- a/003_ffmpeg/index.mdx
+++ b/003_ffmpeg/index.mdx
@@ -2,7 +2,7 @@
 slug:  "/posts/ffmpeg"
 date:  "2022-06-21"
 title: "Automating Videos with FFMpeg"
-icon:  "Ffmpeg"
+icon:  "ffmpeg"
 ---
 
 # 🎥 Auto-Editing, Converting, Colour Correcting and Grading Videos with FFMpeg
