--- a/005_svg_effects/index.mdx
+++ b/005_svg_effects/index.mdx
@@ -11,7 +11,8 @@ import bigben from "./bigben.jpg"
 
 Note, this article is going to try to be as simple as possible. I'm not going into the depths of SVG functions and elements... more just a reference on how to do specific things. It's a cobbled collection of information I've found from other people rather than any critical-thinking on my part. Check out the links for more in-depth info on each topic.
 
-[toc]
+```toc
+```
 
 ![](bigben.jpg)
 
