--- a/macos__colorpicker--app/index.mdx
+++ b/macos__colorpicker--app/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug:  "/projects/macos__colorpicker--app"
-date:  "text"
+date:  "2021-10-28"
 title: "macos__colorpicker--app"
 icon:  "rich"
 ---
