--- a/macos__json2clr--convert/index.mdx
+++ b/macos__json2clr--convert/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug:  "/projects/macos__json2clr--convert"
-date:  "text"
+date:  "2022-06-23"
 title: "macos__json2clr--convert"
 icon:  "rich"
 ---
